# ToffanimEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _gvimrc  _gvimrc.backup  build.linux  coding_guidelines.txt  imgui.ini  premake4.lua  toffanim.vim  vim_cheatsheet.txt  vim_cheatsheet_essential.txt
assets/models/: Sphere.FBX
assets/shaders/: blit.frag  directionallight.frag  explode.frag  explode.geom  explode.tcs  explode.tes  explode.vert  extractBright.frag  gbuffer.frag  gbuffer.vert  hair.tcs  hair.tes  pointlight.frag  skybox.frag  skybox.vert  spotlight.frag  sun.frag  terrain.frag  terrain.tcs  terrain.tes  terrain.vert  terrainNormal.frag
assets/shaders/PBR/: CubeMapBlit.frag  CubeMapBlit.vert  FXAA.frag  IntegrateBRDF.frag  IntegrateBRDF.vert  Invert.frag  Invert.vert  PreEnvFilter.frag  PreEnvFilter.geom  PreEnvFilter.vert  ShadingFinal.frag  pbr_header.head  pointlight.frag
lib/imgui/examples/opengl3_example/: imgui_impl_glfw_gl3.cpp
scripts/: compileTE.bat  executeTE.bat  openTE.bat
sideProjects/DX12Project/: CMakeLists.txt
sideProjects/VulkanProject/: CMakeLists.txt
sideProjects/VulkanProject/shaders/: compile.bat
sideProjects/VulkanProject/src/: main.cpp  tiny_obj_loader.h  types.h
src/: AndroidManifest.xml  CMakeCache.txt  CMakeLists.txt  Skybox.cpp  Skybox.h  TE.ctm  ToyKey.keystore  build.bat  engine.h  main.cpp
src/CodeSave/actor/: Actor.cpp  Actor.h
src/CodeSave/camera/: Camera.cpp  Camera.h
src/CodeSave/controller/: Controller.cpp  Controller.h
src/CodeSave/game/: Game.cpp  Game.h
src/CodeSave/main/: Main.cpp  Main.h
src/CodeSave/managers/: ControllerManager.cpp  ControllerManager.h  Manager.cpp  Manager.h
src/CodeSave/mesh/: AABB.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  bvh.cpp  bvh.h
src/CodeSave/player/: Player.cpp  Player.h
src/CodeSave/postFX/: PostFX.cpp  PostFX.h
src/CodeSave/shader/: Shader.cpp  Shader.h
src/CodeSave/skybox/: Skybox.cpp  Skybox.h
src/CodeSave/utils/: Utils.cpp  Utils.h
src/TECore/: Initialisation.h  actor.cpp  actor.h  component.cpp  component.h  core.h  entity.h  fbo.cpp  fbo.h  frame_buffer.cpp  frame_buffer.h  globals.h  input_component.cpp  input_component.h  input_handler.cpp  input_handler.h  inputs.h  math.h  plateform.cpp  plateform.h  plateform_android.cpp  plateform_android.h  plateform_openglES_android.cpp  plateform_openglES_android.h  plateform_openglES_web.cpp  plateform_openglES_web.h  plateform_opengl_win32.cpp  plateform_opengl_win32.h  plateform_web.cpp  plateform_web.h  plateform_win32.cpp  plateform_win32.h  sprite.h  texture.cpp  texture.h  typedef.h  types.h  utils.cpp  utils.h  vertex.h  (+6 more)
src/TEDebug/: debug.h  debug_functions.h  debug_memory.h  debug_ui.h
src/TEEditor/: editor.h
src/TEGame/: actor.cpp  actor.h  game.h
src/TEPhysics/: bvh.cpp  bvh.h  physic.cpp  physic.h
src/TERenderer/: camera.cpp  camera.h  camera_actor.cpp  camera_actor.h  camera_component.cpp  camera_component.h  renderer.h  shader.cpp  shader.h  skybox.cpp  skybox.h  sprite.cpp  sprite.h
src/main/: Main.cpp  Main.h
src/utils/: Utils.cpp  Utils.h
